[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "likelihoodlum"
version = "1.0.0"
description = "🎲 Detect whether a GitHub repo's code was likely written by an LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "gotnull", email = "gotnull@users.noreply.github.com"},
]
keywords = [
    "llm",
    "detection",
    "github",
    "code-analysis",
    "ai-detection",
    "commit-analysis",
    "heuristics",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]

[project.urls]
Homepage = "https://github.com/gotnull/likelihoodlum"
Repository = "https://github.com/gotnull/likelihoodlum"
Issues = "https://github.com/gotnull/likelihoodlum/issues"

[project.scripts]
likelihoodlum = "llm_detector:main"

[tool.setuptools]
py-modules = ["llm_detector"]
